--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: "Introduction"
 description: "Welcome to the home of your new documentation"
 ---
 
@@ -8,64 +8,39 @@ description: "Welcome to the home of your new documentation"
   src="/images/hero-light.png"
   alt="Hero Light"
 />
+
 <img
   className="hidden dark:block"
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
 
-## Setting up
+## Getting Started
 
 The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Getting Started" icon="pen-to-square" href="/quickstart">
+    Start using Universal MCP, whether you prefer cloud option or local setup.
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
+  <Card title="Develeopment" icon="image" href="/development">
     Preview your changes before you push to make sure they're perfect
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Important Links
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="New Card" icon="sparkles">
+    The universal MCP SDK.
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="Documentation" icon="sparkles" href="/docs">
+    
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
+  <Card title="Examples" icon="sparkles" href="/examples">
+    Some example agents built using universal MCP SDK
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+  <Card title="API Reference" icon="sparkles" href="/api-reference">
+    
   </Card>
 </CardGroup>
