--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,56 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
 ---
 
-## Setup your development
+## This guide will walk you through the basic steps to set up an application with an action, using both the AgentR integration for cloud-based OAuth and credential management, and a local setup using API Key integration.
 
-Learn how to update your docs locally and deploy them to the public.
+## **Using AgentR Cloud**
 
-### Edit and preview
+1. Visit [agentr.dev](http://agentr.dev) and signup
+2. [**<u>https://agentr.dev/quickstart</u>**](https://agentr.dev/quickstart)
+3. Enable required applications at [**<u>https://agentr.dev/apps</u>**](https://agentr.dev/apps)
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+## **Local Setup**
 
+This option is suitable if you are working with an API that uses simple API key authentication and you want to manage it locally.
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+**Prerequisites:**
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
-  </Accordion>
-</AccordionGroup>
+- You have an API key for the service you want to integrate with.
 
-### Deploy your changes
+**Steps:**
 
-<AccordionGroup>
+1. **Choose a Credential Store:**
+   - **Environment Variable:** Store your API key in an environment variable (e.g., `MY_SERVICE_API_KEY`). This is common and secure.
+   - **Keyring:** Use the system's secure credential storage.
+   - **Memory:** For testing/temporary use only (not persistent).
+2. **Choose an Application class:** Use a pre built application or build your own application class. Refer to /applications to learn how to build your own.
+3. **Configure Integration and Initialize Application (Python):** In your Python script, set up the API key integration and initialize your application.
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
-
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
-
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
-
-</CardGroup>
+   ```python
+   from universal_mcp.applications import APIApplication # Or your specific App class
+   from universal_mcp.integrations import ApiKeyIntegration
+   from universal_mcp.stores import EnvironmentStore, MemoryStore
+   from universal_mcp.server import SingleAppMCPServer
+   
+   
+   # Option 2b: Using MemoryStore (for quick testing)
+   store_mem = MemoryStore()
+   # Manually add the key to the memory store for this example
+   # The 'name_in_store' is the key used within the store
+   api_key_name_in_store = "MY_APP_API_KEY"
+   store_mem.set(api_key_name_in_store, "dummy_api_key_12345") # Replace with your actual key
+   
+   integration_mem = ApiKeyIntegration(
+       name_in_store=api_key_name_in_store, # Key to lookup in the store
+       store=store_mem,
+   )
+   
+   app_local_mem = MyApp(name="my-app", integration=integration_mem)
+   print(f"Local App '{app_local_mem.name}' initialized. Actions: {app_local_mem.list_tools()}")
+   
+   mcp = SingleAppMCPServer(app_local_mem)
+   
+   ```
+4. **Ceate your MCP Server:**
+5. **Install MCP server**: Install mcp server on your favourite client using `mcp install`
