feat: First version for mintlify docs

--- a/index.mdx
+++ b/index.mdx
@@ -23,7 +23,7 @@ The first step to world-class documentation is setting up your editing environme
   <Card title="Getting Started" icon="pen-to-square" href="/quickstart">
     Start using Universal MCP, whether you prefer cloud option or local setup.
   </Card>
-  <Card title="Develeopment" icon="image" href="/development">
+  <Card title="Development" icon="image" href="/development">
     Preview your changes before you push to make sure they're perfect
   </Card>
 </CardGroup>
@@ -31,16 +31,16 @@ The first step to world-class documentation is setting up your editing environme
 ## Important Links
 
 <CardGroup cols={2}>
-  <Card title="New Card" icon="sparkles">
+  <Card title="Universal MCP SDK" icon="sparkles" href="https://github.com/your-org/universal-mcp-sdk">
     The universal MCP SDK.
   </Card>
   <Card title="Documentation" icon="sparkles" href="/docs">
-    
+    Full documentation for Universal MCP.
   </Card>
   <Card title="Examples" icon="sparkles" href="/examples">
-    Some example agents built using universal MCP SDK
+    Some example agents built using Universal MCP SDK.
   </Card>
   <Card title="API Reference" icon="sparkles" href="/api-reference">
-    
+    Complete API reference for Universal MCP.
   </Card>
 </CardGroup>
