feat: better documentation

--- a/index.mdx
+++ b/index.mdx
@@ -1,46 +1,35 @@
 ---
-title: "Introduction"
-description: "Welcome to the home of your new documentation"
+title: "Universal MCP"
+description: "Connect to 300+ apps from a single interface"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
 
 ## Getting Started
 
-The first step to world-class documentation is setting up your editing environments.
+Start using Universal MCP
 
 <CardGroup cols={2}>
   <Card title="Getting Started" icon="pen-to-square" href="/quickstart">
     Start using Universal MCP, whether you prefer cloud option or local setup.
   </Card>
   <Card title="Development" icon="image" href="/development">
-    Preview your changes before you push to make sure they're perfect
+    Start building with Agentr and Universal MCP SDK
   </Card>
 </CardGroup>
 
 ## Important Links
 
 <CardGroup cols={2}>
-  <Card title="Universal MCP SDK" icon="sparkles" href="https://github.com/your-org/universal-mcp-sdk">
+  <Card title="Universal MCP SDK" icon="code" href="https://github.com/universal-mcp/universal-mcp">
     The universal MCP SDK.
   </Card>
-  <Card title="Documentation" icon="sparkles" href="/docs">
-    Full documentation for Universal MCP.
+  <Card title="Documentation" icon="book" href="/guides">
+    Guides to build your own application and agents using AgentR.
   </Card>
-  <Card title="Examples" icon="sparkles" href="/examples">
-    Some example agents built using Universal MCP SDK.
+  <Card title="Examples" icon="flask" href="https://github.com/universal-mcp/examples">
+    Example agents built using AgentR tools and Universal MCP.
   </Card>
-  <Card title="API Reference" icon="sparkles" href="/api-reference">
+  <Card title="API Reference" icon="file-lines" href="/api-reference">
     Complete API reference for Universal MCP.
   </Card>
 </CardGroup>
