--- a/guides/applications-tools/creating-and-registering-custom-tools.mdx
+++ b/guides/applications-tools/creating-and-registering-custom-tools.mdx
@@ -106,7 +106,7 @@ Once your function is defined, you use the `ToolManager` to register it. You hav
 By following these practices, you can create powerful and reliable custom tools that seamlessly integrate into your Universal MCP-powered AI agents.
 
 ```
- utils/docstring_parser.py - parse_docstring function
- tools/manager.py - ToolManager.add_tool method, tools/tools.py - Tool.from_function method
- examples/langraph.py - `tool_manager.add_tool(calculate, name="calculate")`
+[1] utils/docstring_parser.py - parse_docstring function
+[2] tools/manager.py - ToolManager.add_tool method, tools/tools.py - Tool.from_function method
+[3] examples/agents/langraph.py - `tool_manager.add_tool(calculate, name="calculate")`
 ```
