--- a/guides/applications-tools/loading-and-using-applications.mdx
+++ b/guides/applications-tools/loading-and-using-applications.mdx
@@ -100,6 +100,6 @@ Once an application is instantiated, its primary use is to provide tools to a `T
 ```
 [1] applications/__init__.py - app_from_slug function and package installation logic
 [2] utils/common.py - get_default_class_name, get_default_module_path, get_default_package_name functions
-[3] examples/reddit_summary.py, examples/like_tweet.py - get_application function
+[3] examples/agents/reddit_summary.py, examples/like_tweet.py - get_application function
 [4] servers/server.py - LocalServer._load_app and LocalServer._load_apps methods
 ```
