--- a/guides/applications-tools/understanding-applications.mdx
+++ b/guides/applications-tools/understanding-applications.mdx
@@ -45,8 +45,8 @@ The key aspects you'll implement are:
 By encapsulating the specifics of interacting with an external service within an Application, Universal MCP promotes modularity and reusability. Your AI agents can then interact with a variety of services through a consistent tool-based interface.
 
 ```
- applications/application.py - BaseApplication class
- applications/application.py - APIApplication class
- applications/application.py - GraphQLApplication class
- applications/README.md - Overview of creating a new application
+[1] applications/application.py - BaseApplication class
+[2] applications/application.py - APIApplication class
+[3] applications/application.py - GraphQLApplication class
+[4] applications/README.md - Overview of creating a new application
 ```
