--- a/guides/applications-tools/understanding-tools.mdx
+++ b/guides/applications-tools/understanding-tools.mdx
@@ -79,9 +79,9 @@ Tools are typically defined in one of two ways:
 By defining clear, well-documented tools, you provide AI agents with the precise capabilities they need to interact effectively with external systems.
 
 ```
- tools/tools.py - Tool class definition and from_function method
- tools/func_metadata.py - FuncMetadata and ArgModelBase classes
- examples/langraph.py - calculate function example
- utils/docstring_parser.py - parse_docstring function
- tools/adapters.py - ToolFormat and conversion functions
+[1] tools/tools.py - Tool class definition and from_function method
+[2] tools/func_metadata.py - FuncMetadata and ArgModelBase classes
+[3] examples/langraph.py - calculate function example
+[4] utils/docstring_parser.py - parse_docstring function
+[5] tools/adapters.py - ToolFormat and conversion functions
 ```
