--- a/guides/building-agents/example-blog-generator.mdx
+++ b/guides/building-agents/example-blog-generator.mdx
@@ -29,7 +29,7 @@ Create an agent that, given a topic and Hashnode publication ID:
 
     blog_app = get_application("hashnode")
     research_app = get_application("perplexity")
-    image_app = get_application("falai") # Assuming fal.ai is wrapped as 'falai'
+    image_app = get_application("falai")
     ```
 
 2.  **Initialize LLM and ToolManager:**
@@ -134,5 +134,5 @@ The agent will execute a complex sequence:
 This example highlights the power of Universal MCP in enabling agents to perform sophisticated, multi-step tasks by orchestrating tools from completely different services.
 
 ```
- exmples.xml - examples/blog.py
+[1] examples/agnets/blog.py
 ```
