--- a/guides/building-agents/example-calculator-agent.mdx
+++ b/guides/building-agents/example-calculator-agent.mdx
@@ -98,5 +98,5 @@ Create an agent that can answer questions like "What is 2 + 2?".
 This simple example illustrates the core workflow: defining a function, registering it as an MCP tool, and providing it to a Langchain agent to extend its capabilities. More complex agents will follow a similar pattern but with tools from various MCP `Applications`.
 
 ```
-[1] exmples.xml - examples/langraph.py
+[1] examples/agents/langraph.py
 ```
