--- a/guides/building-agents/example-github-agent.mdx
+++ b/guides/building-agents/example-github-agent.mdx
@@ -59,7 +59,7 @@ Build an agent that can, when asked to "Star the repository username/repo_name":
     Retrieve the list of tools formatted for the OpenAI API.
 
     ```python
-    # openai_tools_json = tool_manager.list_tools(format="openai")
+    openai_tools_json = tool_manager.list_tools(format="openai")
     ```
 
 4.  **Prepare Conversation and Make Initial API Call:**
@@ -186,5 +186,5 @@ Build an agent that can, when asked to "Star the repository username/repo_name":
 This demonstrates how to integrate Universal MCP with OpenAI's tool-calling capabilities, enabling agents to interact with services like GitHub in a natural language-driven way.
 
 ```
- exmples.xml - examples/github.py
+[1] examples/agents/github.py
 ```
