--- a/guides/building-agents/example-reddit-summarizer.mdx
+++ b/guides/building-agents/example-reddit-summarizer.mdx
@@ -127,5 +127,5 @@ The agent will:
 This example showcases how an agent can orchestrate multiple tools from different MCP applications to achieve a complex user goal.
 
 ```
- exmples.xml - examples/reddit_summary.py
+[1] examples/agents/reddit_summary.py
 ```
