--- a/guides/building-agents/using-tools-with-langchain.mdx
+++ b/guides/building-agents/using-tools-with-langchain.mdx
@@ -76,6 +76,6 @@ result = await agent.ainvoke(...)
 This pattern of initializing `ToolManager`, registering tools (either from applications or custom functions), converting them, and then passing them to a Langchain agent is fundamental. The subsequent example guides will build upon this by using tools from specific MCP applications.
 
 ```
- tools/adapters.py - convert_tool_to_langchain_tool, ToolFormat
- exmples.xml - examples/langraph.py
+[1] tools/adapters.py - convert_tool_to_langchain_tool, ToolFormat
+[2] examples/agents/langraph.py
 ```
