--- a/guides/getting-started/installation.mdx
+++ b/guides/getting-started/installation.mdx
@@ -41,6 +41,6 @@ Supported applications include: `claude`, `cursor`, `cline`, `continue`, `goose`
 With Universal MCP installed, you're ready to configure and run your first server!
 
 ```
- cli.py
- utils/installation.py
+[1] cli.py
+[2] utils/installation.py
 ```
