--- a/guides/integrations-credentials/leveraging-agentr-integration.mdx
+++ b/guides/integrations-credentials/leveraging-agentr-integration.mdx
@@ -66,8 +66,9 @@ If you configure your Universal MCP server with `type: "agentr"` in `ServerConfi
 
 Using `AgentRIntegration` simplifies credential management by delegating it to the AgentR platform, especially useful for OAuth-based services and when managing many integrations.
 
-``` integrations/integration.py - AgentRIntegration class
- utils/agentr.py - AgentrClient class and its methods
- exmples.xml - examples/reddit_summary.py - get_application function
- servers/server.py - AgentRServer class
+``` 
+[1] integrations/integration.py - AgentRIntegration class
+[2] utils/agentr.py - AgentrClient class and its methods
+[3] examples/agents/reddit_summary.py - get_application function
+[4] servers/server.py - AgentRServer class
 ```
