--- a/guides/integrations-credentials/understanding-integrations.mdx
+++ b/guides/integrations-credentials/understanding-integrations.mdx
@@ -49,8 +49,8 @@ In the `ServerConfig` (e.g., in your `local_config.json`), you can also define i
 The `integrations/README.md` file provides a high-level overview of these concepts. [4]
 
 ```
- integrations/integration.py - Integration class, ApiKeyIntegration, AgentRIntegration
- utils/agentr.py - AgentrClient class
- config.py - IntegrationConfig within AppConfig
- integrations/README.md
+[1] integrations/integration.py - Integration class, ApiKeyIntegration, AgentRIntegration
+[2] utils/agentr.py - AgentrClient class
+[3] config.py - IntegrationConfig within AppConfig
+[4] integrations/README.md
 ```
