--- a/guides/getting-started/running-the-server.mdx
+++ b/guides/getting-started/running-the-server.mdx
@@ -59,5 +59,5 @@ Your MCP server is now ready to serve tools to AI agents or other clients! In th
 To stop the server, you can usually press `Ctrl+C` in the terminal where it's running.
 
 ```
- cli.py - run command
+[1] cli.py - run command
 ```
