--- a/guides/building-agents/introduction.mdx
+++ b/guides/building-agents/introduction.mdx
@@ -2,8 +2,6 @@
 title: Building AI Agents with MCP Tools
 ---
 
-# Building AI Agents with MCP Tools
-
 The primary goal of Universal MCP is to empower AI models, transforming them into capable agents that can interact with and perform actions in the digital world. This is achieved by providing these AI models with a well-defined set of **Tools** derived from various **Applications**.
 
 ## What is an AI Agent in this Context?
@@ -33,5 +31,6 @@ In the following guides, we'll explore how to integrate Universal MCP tools with
 *   **Langchain (specifically with LangGraph):** A powerful framework for building stateful, multi-actor applications with LLMs. We'll see how MCP tools can be seamlessly used within Langchain agent setups.
 *   **OpenAI Functions/Tools API:** Directly using OpenAI's models that support tool calling, by providing them with MCP tool definitions.
 
+For practical examples and code implementations, please refer to the Universal MCP examples repository [here](https://github.com/universal-mcp/examples)
+
 By the end of this section, you'll be able to build agents capable of leveraging the diverse functionalities you've exposed through Universal MCP.
-```
