--- a/guides/introduction/what-is-universal-mcp.mdx
+++ b/guides/introduction/what-is-universal-mcp.mdx
@@ -4,7 +4,7 @@ title: What is Universal MCP?
 
 Welcome to the Universal Model Control Protocol (MCP)!
 
-Universal MCP is a powerful framework designed to bridge the gap between AI models and the vast world of external systems and APIs. At its core, it provides a standardized way for AI to interact with, control, and leverage the functionalities of diverse external services.
+[Universal MCP](https://github.com/universal-mcp/universal-mcp) is a powerful framework designed to bridge the gap between AI models and the vast world of external systems and APIs. At its core, it provides a standardized way for AI to interact with, control, and leverage the functionalities of diverse external services.
 
 Think of it as a universal adapter and control layer that empowers your AI models to:
 
